--- a/Assets/Plugins/Android/mainTemplate.gradle
+++ b/Assets/Plugins/Android/mainTemplate.gradle
@@ -5,11 +5,15 @@
         url = "https://maven.pkg.github.com/SariskaIO/maven-repository"
         credentials {
         username = "SariskaIO"
-        password = "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"
+        password = "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"
     }
     }
         maven {
             url "https://maven.pkg.github.com/SariskaIO/maven-repository" // Assets/Plugins/Editor/iosDependencies.xml:15
+credentials {
+        username = "SariskaIO"
+        password = "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"
+    }
         }
     }
 }
